# src/api/api.yaml
@@ -61,7 +61,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /cells/{cell_id}:
+  /cells/{cell_id}/meta:
     get:
       summary: Fetches cell with cell_id
       x-openapi-router-controller: api.controllers.cell_controller
@@ -95,7 +95,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /tests/{test_name}:
+  /cells/all/tests/{test_name}/meta:
     get:
       summary: Fetches tests of testname
       x-openapi-router-controller: api.controllers.cell_controller
@@ -129,17 +129,101 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /ts/{test_name}:
+  /cells/all/tests/{test_name}/ts:
     get:
       summary: Fetches tests of testname
       x-openapi-router-controller: api.controllers.cell_controller
-      operationId: get_timeseries
+      operationId: get_ts
       tags:
         - tests
       parameters:
       - name: test_name
         in: path
         description: Cell ID of the resource to get
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        '200':
+          description: A paged array of cells
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/Cells"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /cells/{cell_id}/tests/{test_name}/ts:
+    get:
+      summary: Fetches tests of testname
+      x-openapi-router-controller: api.controllers.cell_controller
+      operationId: get_test_ts_with_id
+      tags:
+        - tests
+      parameters:
+      - name: cell_id
+        in: path
+        description: Cell ID of the resource to get
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: test_name
+        in: path
+        description: Test Name of the resource to get
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        '200':
+          description: A paged array of cells
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/Cells"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /cells/{cell_id}/tests/{test_name}/meta:
+    get:
+      summary: Fetches tests of testname
+      x-openapi-router-controller: api.controllers.cell_controller
+      operationId: get_meta_with_id
+      tags:
+        - tests
+      parameters:
+      - name: cell_id
+        in: path
+        description: Cell ID of the resource to get
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: test_name
+        in: path
+        description: Test Name of the resource to get
         required: true
         style: simple
         explode: false
